# routes/post.js
@@ -3,6 +3,7 @@ const router = express.Router();
 const createError = require('http-errors');
 const { users, posts } = require('../models/fakeDB');
 const { User, Post, Location, Image } = require('../models');
+const Paginator = require('../src/paginatior');
 
 const getRelatedPost = (postid) => {
   const relatedPost = posts.getRelatedPost(postid);
@@ -55,6 +56,57 @@ router.get('/related-to', (req, res, next) => {
   const sendingData = parseData(relatedPost);
 
   res.json(sendingData);
+});
+
+router.get('/', async (req, res, next) => {
+  try {
+    const page = req.query.page;
+    const perPage = 20;
+
+    if(!page && page === 0) next(createError(400, 'page number must be defined minimum 1'));
+
+    const paginator = new Paginator({ model: Post, perPage });
+    const postAttributes = ['id', 'description', 'title_companion', 'title_activity'];
+    const include = [{
+                      model: User,
+                      attributes: ['profile_image', 'nickname']
+                    }, {
+                      model: Location,
+                      attributes: ['name']
+                    }, {
+                      model: Image,
+                      where: { is_representative: true },
+                      attributes: ['url']
+                    }];
+    const order = ['id'];
+
+    const paginatedData = await paginator.paginate({ page, attributes: postAttributes, include, order });
+
+    if(paginatedData.rows.length === 0) return res.status(204).send();
+    
+    const parsedData = paginatedData.rows.reduce((accumulator, currentValue) => {
+      accumulator.push({
+        postId: currentValue.id,
+        writerImageUrl: currentValue.user.profile_image,
+        writerNickname: currentValue.user.nickname,
+        representativePostImage: currentValue.images[0].url,
+        titlePlace: currentValue.location.name,
+        titleCompanion: currentValue.title_companion,
+        titleActivity: currentValue.title_activity,
+        description: currentValue.description
+      });
+      return accumulator;
+    }, [])
+
+    const result = {
+      hasNextPage: paginatedData.hasNextPage,
+      posts: parsedData
+    }
+
+    return res.json(result);
+  } catch(error) {
+    return next(error);    
+  }
 });
 
 
