# swagger/swagger-api.yaml
@@ -4,7 +4,7 @@ tags:
 schemes:
 - "http"
 paths:
-  /post?page=[page number]:
+  /post?page={page number}:
     get:
       tags:
       - "post"
@@ -14,23 +14,27 @@ paths:
       parameters:
       - in: "query"
         name: "page"
-        description: "page number"
+        description: "page number minimum 1"
         required: true
       responses:
         200:
           description: "Success"
           schema:
-            type: "array"
-            items:
-              $ref: "#definitions/postThumbnailInfo"
+            type: "object"
+            properties:
+              hasNextPage:
+                type: "boolean"
+              posts:
+                type: "array"
+                items:
+                  $ref: "#definitions/postThumbnailInfo"
         204:
-          description: "No Contents.\npage number 가 커서 더이상 글이 없을 때"
+          description: "No Contents.\n해당 page의 post가 없다."
         400:
-          description: "Bad Request.\n요청에 page number 가 없을 때"
+          description: "Bad Request.\n잘못된 page number"
         500:
           description: "Internal Server Error"
-
-  /post/[post id]:
+  /post/{post id}:
     get:
       tags:
       - "post"
@@ -52,7 +56,7 @@ paths:
           description: "Bad Request.\npost id가 없다."
         404:
           description: "Not found.\n해당 post id의 post가 없다."
-  /post/related-to?post-id=[post id]&page=[page number]:
+  /post/related-to?post-id={post id}&page={page number}:
     get:
       tags:
       - "post"
@@ -128,9 +132,13 @@ definitions:
   postThumbnailInfo:
     type: "object"
     properties:
+      postId:
+        type: "number"
       writerImageURL:
         type: "string"
       writerNickname:
+        type: "string"
+      representativePostImageURL:
         type: "string"
       titlePlace:
         type: "string"
@@ -139,6 +147,4 @@ definitions:
       titleActivity:
         type: "string"
       description:
-        type: "string"
-      postImageURL:
         type: "string"
